# cookiecutter-pypackage

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.package_name}}/: README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: tests.yml
{{cookiecutter.package_name}}/docs/: index.md
{{cookiecutter.package_name}}/src/{{cookiecutter.__package_path}}/: __init__.py  my_module.py
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: some_module.py
{{cookiecutter.package_name}}/tests/: __init__.py  test_my_module.py  test_some_module.py
